tests/broken/raw-rust-string.stderr
error: Backtrace:
       [line 4, column 37] Expected '-', found '== 3 %}'
       [line 4, column 37] Alt in "== 3 %}"
 --> tests/broken/raw-rust-string.rs:4:37
  |
4 | #[oxiplate_inline = r##"{% if "foo" == 3 %}"##]
  |                                     ^^^^^^^
